--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>numbers project starter</h1>
+    <section>
+      <!-- single number -->
+      <article>
+        <span class="number" data-value="500">0</span>
+        <p>Users</p>
+      </article>
+
+       <!-- single number -->
+      <article>
+        <span class="number" data-value="17140">0</span>
+        <p>puppies saved</p>
+      </article>
+
+       <!-- single number -->
+      <article>
+        <span class="number" data-value="1500">0</span>
+        <p>happy customers</p>
+      </article>
+    </section>
     <script src="./app.js"></script>
   </body>
 </html>
